[package]
name = "windows-kernel-rs"
version = "0.1.0"
edition = "2018"
license = "MIT"

[[example]]
name = "creating_devices"
crate-type = ["cdylib"]
path = "examples/creating_devices/src/lib.rs"

[[example]]
name = "io_controls"
crate-type = ["cdylib"]
path = "examples/io_controls/src/lib.rs"

[[example]]
name = "reading_and_writing"
crate-type = ["cdylib"]
path = "examples/reading_and_writing/src/lib.rs"

[[example]]
name = "safe_framework"
crate-type = ["cdylib"]
path = "examples/safe_framework/src/lib.rs"

[features]
default = ["alloc"]
alloc = []
system = []

[dependencies]
bitflags = "1.3"
cty = "0.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
widestring = { version = "0.4", default-features = false, features = ["alloc"]}
windows-kernel-sys = { path = "../windows-kernel-sys" }
x86_64 = "0.14.7"
